--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,31 +1,31 @@
 Package: plotSEMM
 Type: Package
-Title: Graphing nonlinear latent variable interactions in SEMM
-Version: 2.0
-Date: 2008-03-11
+Title: Graphing Nonlinear Relations Among Latent Variables from
+        Structural Equation Mixture Models
+Version: 2.1
+Date: 2015-10-04
 Authors@R: c(person("Bethany", "Kok", role = c('ctb')), person("Jolynn",
     "Pek", role = c('ctb')), person("Sonya", "Sterba", role = c('ctb')),
     person("Dan", "Bauer", role = c('ctb')), person("Phil", "Chalmers", email =
     "rphilip.chalmers@gmail.com", role = c('cre', 'ctb')))
-Description: Contains functions plotSEMM_setup, plotSEMM_contour,
-    and plotSEMM_probability, which generate the
-    diagnostic plots proposed by Bauer (2005) to investigate
-    nonlinear latent variable interactions in SEMM using LISREL
-    output.
+Description: Contains a graphical user interface to generate the
+    diagnostic plots proposed by Bauer (2005) and Pek & Chalmers (2015) to investigate
+    nonlinear bivariate relationships in latent regression models using
+    structural equation mixture models (SEMMs).
 Depends: plyr, shiny
-Imports: MplusAutomation, Rcpp, plotrix
+Imports: graphics, methods, stats, MplusAutomation, Rcpp, plotrix
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
 LinkingTo: Rcpp
 Repository: CRAN
 URL: https://github.com/philchalmers/plotSEMM
-Packaged: 2014-07-06 14:00:39 UTC; phil
+NeedsCompilation: yes
+Packaged: 2015-10-04 16:52:52 UTC; phil
 Author: Bethany Kok [ctb],
   Jolynn Pek [ctb],
   Sonya Sterba [ctb],
   Dan Bauer [ctb],
   Phil Chalmers [cre, ctb]
 Maintainer: Phil Chalmers <rphilip.chalmers@gmail.com>
-NeedsCompilation: yes
-Date/Publication: 2014-07-07 14:25:37
+Date/Publication: 2015-10-04 23:46:50
